2019-02-26 (0.12.15)
	ANDROID: Fix POINT returning transposed red + blue

2019-02-14 (0.12.15)
	ANDROID: fix crash entering c,v in edit control mode

2019-02-14 (0.12.15)
	ANDROID: fix crash passing negative duration to SOUND command

2019-02-11 (0.12.15)
	UI: ALT+F4 from edit/run now returns to edit
	UI: avoid flicker from with ALT+F4 -e edit startup

2019-02-02 (0.12.15)
	UI: Edit enter now continues prior line comment

2019-01-21 (0.12.15.1)
	ANDROID: fix setup screen colour display
	ANDROID: show link to android page in about

2019-01-19 (0.12.15)
	UI: added kill-word editor command (alt+d)
	UI: added select-word editor command (alt+w)
	UI: find command primed from editor selection

2018-12-28 (0.12.15)
	Fix crash when using GOTO with a non-existent label
	Fix crash in editor when double tapping empty document
	Fix menu display on chromebook and other devices

2018-11-11 (0.12.14)
	CONSOLE: added support for IMAGE command

2018-10-20 (0.12.14)
	UI: fix navigation when network access down then available
	UI: changed display of "BLACK" to be a slightly ligher onyx colour.
	ANDROID: update help tip in scratch window

2018-10-13 (0.12.14)
	COMMON: fix about page logo

2018-10-09 (0.12.14)
	COMMON: fix crash when passing zero as format argument to DATEFMT

2018-09-30 (0.12.14)
	COMMON: fix broken implementation to avoid appending multiple kwTYPE_EOCs (or kwTYPE_LINE)

2018-09-23 (0.12.14)
	COMMON: fix error message when command "LINE INPUT" attempts to read a non open file

2018-09-23 (0.12.14)
	COMMON: fix crash when attempting to load an image from a failed network connection

2018-08-08 (0.12.13)
	SDL: fix incorrect file loading with ALT+1-9 command

2018-08-08 (0.12.13)
	COMMON: fix problem with SEQ command

2018-08-08 (0.12.13)
	ANDROID: remove hardcoded references to "/sdcard" path

2018-07-15 (0.12.13)
	ANDROID: migrate build from eclispe to android studio
	ANDROID: fix issue #66

2018-07-15 (0.12.13)
	SDL: Added window.setSize function

2018-07-07 (0.12.13)